--- a/Jenkins_Jobs/jobs/Datahunter_Result/builds/21/build.xml
+++ b/Jenkins_Jobs/jobs/Datahunter_Result/builds/21/build.xml
@@ -118,15 +118,15 @@ Leave blank for no exculsion.</description>
         <totalInfos>0</totalInfos>
         <totalDebugs>0</totalDebugs>
         <totalCountsByExtraTag/>
-        <htmlLogFile>C:\_Jenkins\JENKINS_HOME\jobs\Datahunter_Result\builds\21/log_content.html</htmlLogFile>
-        <errorLinksFile>C:\_Jenkins\JENKINS_HOME\jobs\Datahunter_Result\builds\21/logerrorLinks.html</errorLinksFile>
-        <warningLinksFile>C:\_Jenkins\JENKINS_HOME\jobs\Datahunter_Result\builds\21/logwarningLinks.html</warningLinksFile>
-        <infoLinksFile>C:\_Jenkins\JENKINS_HOME\jobs\Datahunter_Result\builds\21/loginfoLinks.html</infoLinksFile>
-        <debugLinksFile>C:\_Jenkins\JENKINS_HOME\jobs\Datahunter_Result\builds\21/logdebugLinks.html</debugLinksFile>
+        <htmlLogFile>C:\_Jenkins\JENKINS_HOME\jobs\DataHunter_Result\builds\21/log_content.html</htmlLogFile>
+        <errorLinksFile>C:\_Jenkins\JENKINS_HOME\jobs\DataHunter_Result\builds\21/logerrorLinks.html</errorLinksFile>
+        <warningLinksFile>C:\_Jenkins\JENKINS_HOME\jobs\DataHunter_Result\builds\21/logwarningLinks.html</warningLinksFile>
+        <infoLinksFile>C:\_Jenkins\JENKINS_HOME\jobs\DataHunter_Result\builds\21/loginfoLinks.html</infoLinksFile>
+        <debugLinksFile>C:\_Jenkins\JENKINS_HOME\jobs\DataHunter_Result\builds\21/logdebugLinks.html</debugLinksFile>
         <linkedFilesByExtraTag/>
         <extraTags/>
-        <parsedLogURL>job/Datahunter_Result/21/parsed_console/log.html</parsedLogURL>
-        <htmlLogPath>C:\_Jenkins\JENKINS_HOME\jobs\Datahunter_Result\builds\21</htmlLogPath>
+        <parsedLogURL>job/DataHunter_Result/21/parsed_console/log.html</parsedLogURL>
+        <htmlLogPath>C:\_Jenkins\JENKINS_HOME\jobs\DataHunter_Result\builds\21</htmlLogPath>
       </result>
     </hudson.plugins.logparser.LogParserAction>
     <htmlpublisher.HtmlPublisherTarget_-HTMLBuildAction plugin="htmlpublisher@1.21">
@@ -202,7 +202,7 @@ Leave blank for no exculsion.</description>
   <charset>windows-1252</charset>
   <keepLog>false</keepLog>
   <builtOn></builtOn>
-  <workspace>C:\_Jenkins\JENKINS_HOME\workspace\Datahunter_Result</workspace>
+  <workspace>C:\_Jenkins\JENKINS_HOME\workspace\DataHunter_Result</workspace>
   <hudsonVersion>2.190.3</hudsonVersion>
   <scm class="hudson.scm.NullChangeLogParser"/>
   <culprits class="com.google.common.collect.EmptyImmutableSortedSet"/>
