--- a/docker/jenkins_home/plugins/command-launcher/META-INF/maven/org.jenkins-ci.plugins/command-launcher/pom.xml
+++ b/docker/jenkins_home/plugins/command-launcher/META-INF/maven/org.jenkins-ci.plugins/command-launcher/pom.xml
@@ -8,7 +8,7 @@
         <relativePath />
     </parent>
     <artifactId>command-launcher</artifactId>
-    <version>1.2</version>
+    <version>1.4</version>
     <packaging>hpi</packaging>
     <properties>
         <jenkins.version>2.86</jenkins.version>
@@ -16,7 +16,7 @@
     </properties>
     <name>Command Agent Launcher Plugin</name>
     <description>Allows agents to be launched using a specified command.</description>
-    <url>https://wiki.jenkins.io/display/JENKINS/Command+Agent+Launcher+Plugin</url>
+    <url>https://github.com/jenkinsci/command-launcher-plugin</url>
     <licenses>
         <license>
             <name>MIT License</name>
@@ -27,7 +27,7 @@
         <connection>scm:git:git://github.com/jenkinsci/${project.artifactId}-plugin.git</connection>
         <developerConnection>scm:git:git@github.com:jenkinsci/${project.artifactId}-plugin.git</developerConnection>
         <url>https://github.com/jenkinsci/${project.artifactId}-plugin</url>
-      <tag>command-launcher-1.2</tag>
+      <tag>command-launcher-1.4</tag>
   </scm>
     <repositories>
         <repository>
@@ -45,7 +45,7 @@
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>script-security</artifactId>
-            <version>1.36</version>
+            <version>1.68</version>
         </dependency>
     </dependencies>
 </project>
