--- a/dataHunterFunctionalTest/pom.xml
+++ b/dataHunterFunctionalTest/pom.xml
@@ -19,11 +19,29 @@
 	<dependencies>
 		
 		<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
+<!-- 		<dependency> -->
+<!-- 		    <groupId>org.seleniumhq.selenium</groupId> -->
+<!-- 		    <artifactId>selenium-java</artifactId> -->
+<!-- 		    <version>3.141.59</version> -->
+<!-- 		</dependency> -->
+
+		<!-- https://mvnrepository.com/artifact/org.apache.jmeter/ApacheJMeter_core -->
+		<dependency>
+			<groupId>org.apache.jmeter</groupId>
+			<artifactId>ApacheJMeter_java</artifactId>
+			<version>5.4.1</version>
+			<scope>provided</scope>
+		</dependency>
+
+
+		
 		<dependency>
 		    <groupId>org.seleniumhq.selenium</groupId>
 		    <artifactId>selenium-java</artifactId>
-		    <version>3.141.59</version>
+		    <version>4.0.0-beta-4</version>
 		</dependency>
+		
+		
 		
 		<dependency>
 			<groupId>commons-beanutils</groupId>
